tests/semantic/fail/call_the_int_police.c
int main(void) {
  int police;
  police();
  return 0;
}
